<resources>
    <string name="app_name">Thirty</string>
    <string name="title_activity_thirty">ThirtyActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="die_button_1">Die 1</string>
    <string name="die_button_2">Die 2</string>
    <string name="die_button_6">Die 6</string>
    <string name="die_button_5">Die 5</string>
    <string name="die_button_4">Die 4</string>
    <string name="die_button_3">Die 3</string>
    <string name="game_information_textView">Game information</string>
    <string name="roll_dice">ROLL DICE</string>
    <string name="calculate_dice">CALCULATE DICE</string>
    <string name="new_game">New Game</string>
    <string name="end_game">End Game</string>
    <string name="scoreboard_result_round">Round: </string>
    <string name="scoreboard_result_pick">Pick: </string>
    <string name="scoreboard_result_score">Score: </string>
</resources>