<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7D7D7"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/die_Button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/die_button_1"
            android:src="@drawable/white1" />

        <ImageButton
            android:id="@+id/die_Button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/die_Button_1"
            android:layout_toRightOf="@+id/die_Button_1"
            android:contentDescription="@string/die_button_2"
            android:src="@drawable/white2" />

        <ImageButton
            android:id="@+id/die_Button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/die_Button_2"
            android:layout_toRightOf="@+id/die_Button_2"
            android:contentDescription="@string/die_button_3"
            android:src="@drawable/white3" />

        <ImageButton
            android:id="@+id/die_Button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/die_Button_1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/die_button_4"
            android:src="@drawable/white4" />

        <ImageButton
            android:id="@+id/die_Button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/die_Button_2"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/die_Button_4"
            android:layout_toRightOf="@+id/die_Button_4"
            android:contentDescription="@string/die_button_5"
            android:src="@drawable/white5" />

        <ImageButton
            android:id="@+id/die_Button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/die_Button_3"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/die_Button_5"
            android:layout_toRightOf="@+id/die_Button_5"
            android:contentDescription="@string/die_button_6"
            android:src="@drawable/white6" />

    </RelativeLayout>

    <TextView
        android:id="@+id/game_status_text"
        android:layout_width="301dp"
        android:layout_height="179dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="start"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/game_information_textView"
        android:textAlignment="viewStart"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/calculate_dice"
        android:layout_width="179dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/calculate_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/roll_dice"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/roll_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>